# KR-DL-G21

./: .gitignore  README.md  burgers.rdf  ege_reasoner.py  example.py  experiment.py  group21.py  playground.py  pyproject.toml  requirements.txt
examples/: example.py
ontology/: burgers.rdf
src/el_reasoner/: __init__.py  __main__.py  cli.py  graphing.py  reasoner.py
src/el_reasoner/managed_dependencies/: __init__.py
