[build-system]
requires = ["setuptools>=68.2"]
build-backend = "setuptools.build_meta"

[project]
name = "el_reasoner"
version = "0.0.1"
description = "The el_reasoner implementation of group 21"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true

pythonVersion = "3.11"
pythonPlatform = "Linux"

executionEnvironments = [{ root = "src" }]